--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 body {
     background: url("/Assets/pexels-ivo-rainha-527110-1290141.jpg") no-repeat center center/cover; 
     font-family: "Recursive";
+    background-color: black;
 }
 
 header {
